wip: add armor automatism

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -34,7 +34,7 @@
   "anima.ui.combat.ammo.quality.title": "Quality",
   "anima.ui.combat.weapons.ammo.title": "Ammo",
   "anima.ui.combat.weapons.weaponFue.title": "Weapon STR",
-  "anima.ui.combat.weapons.hasOwnStr.title": "¿Own STR?",
+  "anima.ui.combat.weapons.hasOwnStr.title": "Own STR?",
   "anima.ui.combat.armors.at.cold.title": "COL",
   "anima.ui.combat.armors.at.none.title": "-",
   "anima.ui.combat.armors.at.cut.title": "CUT",
@@ -43,10 +43,19 @@
   "anima.ui.combat.armors.at.heat.title": "HEA",
   "anima.ui.combat.armors.at.impact.title": "IMP",
   "anima.ui.combat.armors.at.thrust.title": "THR",
-  "anima.ui.combat.armors.equipped.title": "¿Equipped?",
+  "anima.ui.combat.armors.at.cold.base.title": "COL",
+  "anima.ui.combat.armors.at.cut.base.title": "CUT",
+  "anima.ui.combat.armors.at.electricity.base.title": "ELE",
+  "anima.ui.combat.armors.at.energy.base.title": "ENE",
+  "anima.ui.combat.armors.at.heat.base.title": "HEA",
+  "anima.ui.combat.armors.at.impact.base.title": "IMP",
+  "anima.ui.combat.armors.at.thrust.base.title": "THR",
+  "anima.ui.combat.armors.equipped.title": "Equipped?",
   "anima.ui.combat.armors.header.name.title": "Nombre",
   "anima.ui.combat.weapons.integrity.base.title": "Base integrity",
   "anima.ui.combat.weapons.integrity.final.title": "Integrity",
+  "anima.ui.combat.armors.integrity.base.title": "Base integrity",
+  "anima.ui.combat.armors.integrity.title": "Integrity",
   "anima.ui.combat.armors.localization.head.title": "Head",
   "anima.ui.combat.weapon.manageabilityType.title": "Manageability type",
   "anima.ui.combat.weapon.manageabilityType.oneHand.title": "1 hand",
@@ -60,20 +69,24 @@
   "anima.ui.combat.armors.localization.nightdress.title": "Nightdress",
   "anima.ui.combat.armors.localization.title": "Localization",
   "anima.ui.combat.armors.movementRestriction.base.title": "Movem. Restrict. Base",
-  "anima.ui.combat.armors.movementRestriction.final.title": "Movem. Restrict. Final",
+  "anima.ui.combat.armors.movementRestriction.final.title": "Movem. Restrict.",
   "anima.ui.combat.armors.name.title": "Name",
   "anima.ui.combat.armors.naturalPenalty.title": "Natural pen.",
-  "anima.ui.combat.armors.presence.title": "Presence",
+  "anima.ui.combat.armors.naturalPenalty.base.title": "Base natural pen.",
   "anima.ui.combat.armors.quality.title": "Quality",
+  "anima.ui.combat.armors.isEnchanted.title": "Is enchanted?",
   "anima.ui.combat.armors.title": "Armaduras",
   "anima.ui.combat.armors.type.hard.title": "Hard",
   "anima.ui.combat.armors.type.natural.title": "Natural",
   "anima.ui.combat.armors.type.soft.title": "Soft",
   "anima.ui.combat.armors.type.title": "Type",
   "anima.ui.combat.armors.wearArmorRequirement.title": "Wear Armor Requ.",
+  "anima.ui.combat.armors.wearArmorRequirement.base.title": "Wear Armor Requ. Base",
   "anima.ui.combat.baseValues.attack.title": "Attack",
   "anima.ui.combat.baseValues.block.title": "Block",
   "anima.ui.combat.baseValues.dodge.title": "Dodge",
+  "anima.ui.combat.baseValues.wearArmor.title": "Wear armor",
+  "anima.ui.general.naturalPenalty.title": "Natural pen.",
   "anima.ui.combat.baseValues.title": "Base Values",
   "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
   "anima.ui.combat.combatTables.title": "Combat tables",
@@ -96,11 +109,13 @@
   "anima.ui.combat.weapons.initiative.final.title": "Initiative",
   "anima.ui.combat.weapons.initiative.base.title": "Initiative base",
   "anima.ui.combat.weapons.integrity.title": "Integrity",
-  "anima.ui.combat.weapons.isRanged.title": "¿Is ranged?",
+  "anima.ui.combat.weapons.isRanged.title": "Is ranged?",
   "anima.ui.combat.weapons.knowledgeType.title": "Type",
   "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 handed",
   "anima.ui.combat.weapons.presence.base.title": "Base presence",
   "anima.ui.combat.weapons.presence.final.title": "Presence",
+  "anima.ui.combat.armors.presence.base.title": "Base presence",
+  "anima.ui.combat.armors.presence.title": "Presence",
   "anima.ui.combat.weapons.quality.title": "Quality",
   "anima.ui.combat.weapons.range.base.title": "Base range (m)",
   "anima.ui.combat.weapons.range.final.title": "Range (m)",
@@ -219,7 +234,7 @@
   "anima.ui.mystic.spell.grade.intermediate.title": "Intermediate",
   "anima.ui.mystic.spell.grade.maintenanceCost.title": "Maint.",
   "anima.ui.mystic.spell.grade.zeon.title": "Zeon",
-  "anima.ui.mystic.spell.hasDailyMaintenance.title": "¿Daily Mant.?",
+  "anima.ui.mystic.spell.hasDailyMaintenance.title": "Daily Mant.?",
   "anima.ui.mystic.spell.level.title": "Level",
   "anima.ui.mystic.spell.spellType.animatic.title": "Animatic",
   "anima.ui.mystic.spell.spellType.attack.title": "Attack",
