--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -40,10 +40,18 @@
   "anima.ui.combat.armors.at.heat.title": "CAL",
   "anima.ui.combat.armors.at.impact.title": "CON",
   "anima.ui.combat.armors.at.thrust.title": "PEN",
+  "anima.ui.combat.armors.at.cold.base.title": "FRI base",
+  "anima.ui.combat.armors.at.cut.base.title": "FIL base",
+  "anima.ui.combat.armors.at.electricity.base.title": "ELE base",
+  "anima.ui.combat.armors.at.energy.base.title": "ENE base",
+  "anima.ui.combat.armors.at.heat.base.title": "CAL base",
+  "anima.ui.combat.armors.at.impact.base.title": "CON base",
+  "anima.ui.combat.armors.at.thrust.base.title": "PEN base",
   "anima.ui.combat.armors.equipped.title": "¿Equipada?",
   "anima.ui.combat.armors.header.name.title": "Nombre",
   "anima.ui.combat.weapons.reload.base.title": "Recarga base",
   "anima.ui.combat.weapons.reload.final.title": "Recarga",
+  "anima.ui.combat.armors.integrity.base.title": "Entereza base",
   "anima.ui.combat.armors.integrity.title": "Entereza",
   "anima.ui.combat.armors.localization.head.title": "Cabeza",
   "anima.ui.combat.weapon.manageabilityType.title": "Manejabilidad",
@@ -58,9 +66,11 @@
   "anima.ui.combat.armors.localization.nightdress.title": "Camisola",
   "anima.ui.combat.armors.localization.title": "Localización",
   "anima.ui.combat.armors.movementRestriction.base.title": "Restr. Movim. Base",
-  "anima.ui.combat.armors.movementRestriction.final.title": "Restr. Movim. Final",
+  "anima.ui.combat.armors.movementRestriction.final.title": "Restr. Movim.",
+  "anima.ui.combat.armors.isEnchanted.title": "¿Está encantada?",
   "anima.ui.combat.armors.name.title": "Nombre",
   "anima.ui.combat.armors.naturalPenalty.title": "Pen. natural",
+  "anima.ui.combat.armors.naturalPenalty.base.title": "Pen. natural base",
   "anima.ui.combat.weapons.presence.base.title": "Presencia base",
   "anima.ui.combat.weapons.presence.final.title": "Presencia",
   "anima.ui.combat.armors.quality.title": "Calidad",
@@ -69,10 +79,14 @@
   "anima.ui.combat.armors.type.natural.title": "Natural",
   "anima.ui.combat.armors.type.soft.title": "Blanda",
   "anima.ui.combat.armors.type.title": "Tipo",
+  "anima.ui.combat.armors.presence.base.title": "Presencia base",
+  "anima.ui.combat.armors.presence.title": "Presencia",
   "anima.ui.combat.armors.wearArmorRequirement.title": "Req. Llevar Armadura",
+  "anima.ui.combat.armors.wearArmorRequirement.base.title": "Req. Llevar Armadura Base",
   "anima.ui.combat.baseValues.attack.title": "Ataque",
   "anima.ui.combat.baseValues.block.title": "Parada",
   "anima.ui.combat.baseValues.dodge.title": "Esquiva",
+  "anima.ui.combat.baseValues.wearArmor.title": "Llevar armadura",
   "anima.ui.combat.baseValues.title": "Valores base",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
   "anima.ui.combat.combatTables.title": "Tablas de combate",
@@ -160,6 +174,7 @@
   "anima.ui.elanSection.title": "Elan",
   "anima.ui.experienceSection.title": "Experiencia",
   "anima.ui.general.fatigue.title": "Cansancio",
+  "anima.ui.general.naturalPenalty.title": "Pen. Natural",
   "anima.ui.general.initiative.base.title": "Tur. Base",
   "anima.ui.general.initiative.primary.title": "Tur. 1",
   "anima.ui.general.initiative.secondary.title": "Tur. 2",
