changes: add more final fields to proj mag, psy, and more

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -211,7 +211,7 @@
   "anima.ui.mystic.magicProjection.defensive.rollMessage": "defensive magic projection",
   "anima.ui.mystic.magicProjection.defensive.title": "Defensive",
   "anima.ui.mystic.magicProjection.final.rollMessage": "magic projection",
-  "anima.ui.mystic.magicProjection.final.title": "Final",
+  "anima.ui.mystic.magicProjection.final.title": "Projection",
   "anima.ui.mystic.magicProjection.imbalance.title": "Imbalance",
   "anima.ui.mystic.magicProjection.offensive.rollMessage": "offensive magic projection",
   "anima.ui.mystic.magicProjection.offensive.title": "Offensive",
