--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -211,7 +211,7 @@
   "anima.ui.mystic.magicProjection.defensive.rollMessage": "proyección mágica defensiva",
   "anima.ui.mystic.magicProjection.defensive.title": "Defensiva",
   "anima.ui.mystic.magicProjection.final.rollMessage": "proyección mágica",
-  "anima.ui.mystic.magicProjection.final.title": "Final",
+  "anima.ui.mystic.magicProjection.final.title": "Proyección",
   "anima.ui.mystic.magicProjection.imbalance.title": "Desequilibrio",
   "anima.ui.mystic.magicProjection.offensive.rollMessage": "proyección mágica ofensiva",
   "anima.ui.mystic.magicProjection.offensive.title": "Ofensiva",
