changes: add movement type automatism

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -184,6 +184,7 @@
   "anima.ui.general.modifiers.physicalActions.title": "Physical",
   "anima.ui.general.modifiers.title": "- Modifiers -",
   "anima.ui.general.movement.quarter.title": "1/4 (m)",
+  "anima.ui.general.movementType.title": "Mov. type",
   "anima.ui.general.movement.title": "Movement (m)",
   "anima.ui.languageSection.base": "Base",
   "anima.ui.languageSection.title": "Languages",
