--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -184,6 +184,7 @@
   "anima.ui.general.modifiers.physicalActions.title": "Físicos",
   "anima.ui.general.modifiers.title": "- Modificadores -",
   "anima.ui.general.movement.quarter.title": "1/4 (m)",
+  "anima.ui.general.movementType.title": "Tipo mov.",
   "anima.ui.general.movement.title": "Movimiento (m)",
   "anima.ui.languageSection.base": "Base",
   "anima.ui.languageSection.title": "Idiomas",
