changes: move psichic powers to its own tabs

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -223,7 +223,9 @@
   "anima.ui.mystic.selectedSpells.name.title": "Conjuro",
   "anima.ui.mystic.selectedSpells.title": "Conjuros seleccionados",
   "anima.ui.mystic.spell.actionType.active.title": "Activo",
+  "anima.ui.psychic.psychicPowers.actionType.active.title": "Activo",
   "anima.ui.mystic.spell.actionType.passive.title": "Pasivo",
+  "anima.ui.psychic.psychicPowers.actionType.passive.title": "Pasivo",
   "anima.ui.mystic.spell.actionType.title": "Acción",
   "anima.ui.mystic.spell.cost.title": "Coste",
   "anima.ui.mystic.spell.grade.advanced.title": "Avanzado",
@@ -281,6 +283,8 @@
   "anima.ui.mystic.summoning.title": "Convocación",
   "anima.ui.mystic.tabs.main": "Principal",
   "anima.ui.mystic.tabs.secondaries": "Conjuros",
+  "anima.ui.psychic.tabs.main": "Principal",
+  "anima.ui.psychic.tabs.secondaries": "Poderes",
   "anima.ui.mystic.zeon.accumulated.title": "Acumulado",
   "anima.ui.mystic.zeon.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
@@ -305,7 +309,6 @@
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bono",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Mant.",
   "anima.ui.psychic.psychicPowers.power.header.level.title": "Nivel",
-  "anima.ui.psychic.psychicPowers.power.header.name.title": "Poder",
   "anima.ui.psychic.psychicPowers.title": "Poderes Psíquicos",
   "anima.ui.psychic.psychicProjection.projection.title": "Proyección",
   "anima.ui.psychic.psychicProjection.title": "Projecc. Psíquica",
