--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -223,7 +223,9 @@
   "anima.ui.mystic.selectedSpells.name.title": "Spell",
   "anima.ui.mystic.selectedSpells.title": "Selected spells",
   "anima.ui.mystic.spell.actionType.active.title": "Active",
+  "anima.ui.psychic.psychicPowers.actionType.active.title": "Active",
   "anima.ui.mystic.spell.actionType.passive.title": "Passive",
+  "anima.ui.psychic.psychicPowers.actionType.passive.title": "Passive",
   "anima.ui.mystic.spell.actionType.title": "Action",
   "anima.ui.mystic.spell.cost.title": "Cost",
   "anima.ui.mystic.spell.grade.advanced.title": "Advanced",
@@ -281,6 +283,8 @@
   "anima.ui.mystic.summoning.title": "Summoning",
   "anima.ui.mystic.tabs.main": "Main",
   "anima.ui.mystic.tabs.secondaries": "Spells",
+  "anima.ui.psychic.tabs.main": "Main",
+  "anima.ui.psychic.tabs.secondaries": "Powers",
   "anima.ui.mystic.zeon.accumulated.title": "Accumulated",
   "anima.ui.mystic.zeon.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
@@ -305,7 +309,6 @@
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bonus",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Maint.",
   "anima.ui.psychic.psychicPowers.power.header.level.title": "Level",
-  "anima.ui.psychic.psychicPowers.power.header.name.title": "Power",
   "anima.ui.psychic.psychicPowers.title": "Psychic Powers",
   "anima.ui.psychic.psychicProjection.projection.title": "Projection",
   "anima.ui.psychic.psychicProjection.title": "Psychic projection",
