changes: restructure ki accumulation data schema

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -138,10 +138,10 @@
   "anima.ui.domine.kiAccumulation.agility.title": "Agi",
   "anima.ui.domine.kiAccumulation.constitution.title": "Con",
   "anima.ui.domine.kiAccumulation.dexterity.title": "Dex",
-  "anima.ui.domine.kiAccumulation.generic.title": "Generic",
+  "anima.ui.domine.kiAccumulation.reserve.title": "Reserve",
   "anima.ui.domine.kiAccumulation.power.title": "Pow",
   "anima.ui.domine.kiAccumulation.strength.title": "Str",
-  "anima.ui.domine.kiAccumulation.title": "Ki Reserve",
+  "anima.ui.domine.kiAccumulation.title": "Accu. Ki",
   "anima.ui.domine.kiAccumulation.willPower.title": "Wil",
   "anima.ui.domine.kiSkills.title": "Ki Skills",
   "anima.ui.domine.martialArts.grade.title": "Grade",
