--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -137,10 +137,10 @@
   "anima.ui.domine.kiAccumulation.agility.title": "Agi",
   "anima.ui.domine.kiAccumulation.constitution.title": "Con",
   "anima.ui.domine.kiAccumulation.dexterity.title": "Des",
-  "anima.ui.domine.kiAccumulation.generic.title": "Genérico",
+  "anima.ui.domine.kiAccumulation.reserve.title": "Reserva",
   "anima.ui.domine.kiAccumulation.power.title": "Pod",
   "anima.ui.domine.kiAccumulation.strength.title": "Fue",
-  "anima.ui.domine.kiAccumulation.title": "Reserva Ki",
+  "anima.ui.domine.kiAccumulation.title": "Ki acu.",
   "anima.ui.domine.kiAccumulation.willPower.title": "Vol",
   "anima.ui.domine.kiSkills.title": "Habilidades del Ki",
   "anima.ui.domine.martialArts.grade.title": "Grado",
