changes: add weapon size as selectable

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -141,6 +141,9 @@
   "anima.ui.domine.kiAccumulation.power.title": "Pod",
   "anima.ui.domine.kiAccumulation.strength.title": "Fue",
   "anima.ui.domine.kiAccumulation.title": "Ki acu.",
+  "anima.ui.combat.weapon.size.normal.title": "Normal",
+  "anima.ui.combat.weapon.size.enormous.title": "Enorme",
+  "anima.ui.combat.weapon.size.giant.title": "Gigante",
   "anima.ui.domine.kiAccumulation.willPower.title": "Vol",
   "anima.ui.domine.kiSkills.title": "Habilidades del Ki",
   "anima.ui.domine.martialArts.grade.title": "Grado",
