--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -142,6 +142,9 @@
   "anima.ui.domine.kiAccumulation.power.title": "Pow",
   "anima.ui.domine.kiAccumulation.strength.title": "Str",
   "anima.ui.domine.kiAccumulation.title": "Accu. Ki",
+  "anima.ui.combat.weapon.size.normal.title": "Normal",
+  "anima.ui.combat.weapon.size.enormous.title": "Enormous",
+  "anima.ui.combat.weapon.size.giant.title": "Giant",
   "anima.ui.domine.kiAccumulation.willPower.title": "Wil",
   "anima.ui.domine.kiSkills.title": "Ki Skills",
   "anima.ui.domine.martialArts.grade.title": "Grade",
