changes: initiative automatism

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -51,6 +51,7 @@
   "anima.ui.combat.armors.at.impact.base.title": "IMP",
   "anima.ui.combat.armors.at.thrust.base.title": "THR",
   "anima.ui.combat.armors.equipped.title": "Equipped?",
+  "anima.ui.combat.weapons.equipped.title": "Equipped?",
   "anima.ui.combat.weapons.integrity.base.title": "Base integrity",
   "anima.ui.combat.weapons.integrity.final.title": "Integrity",
   "anima.ui.combat.armors.integrity.base.title": "Base integrity",
@@ -118,8 +119,13 @@
   "anima.ui.combat.weapons.quality.title": "Quality",
   "anima.ui.combat.weapons.range.base.title": "Base range (m)",
   "anima.ui.combat.weapons.range.final.title": "Range (m)",
+  "anima.ui.combat.weapons.sizeProportion.title": "Size proportion",
   "anima.ui.combat.weapons.size.title": "Size",
   "anima.ui.combat.weapons.special.title": "Special",
+  "anima.ui.combat.weapon.size.small.title": "Small",
+  "anima.ui.combat.weapon.size.medium.title": "Medium",
+  "anima.ui.combat.weapon.size.big.title": "Big",
+  "anima.ui.combat.weapons.isShield.title": "¿Is shield?",
   "anima.ui.combat.weapons.title": "Weapons",
   "anima.ui.contactSection.contactRow.description": "Description",
   "anima.ui.contactSection.contactRow.name": "Name",
@@ -142,9 +148,9 @@
   "anima.ui.domine.kiAccumulation.power.title": "Pow",
   "anima.ui.domine.kiAccumulation.strength.title": "Str",
   "anima.ui.domine.kiAccumulation.title": "Accu. Ki",
-  "anima.ui.combat.weapon.size.normal.title": "Normal",
-  "anima.ui.combat.weapon.size.enormous.title": "Enormous",
-  "anima.ui.combat.weapon.size.giant.title": "Giant",
+  "anima.ui.combat.weapon.sizeProportion.normal.title": "Normal",
+  "anima.ui.combat.weapon.sizeProportion.enormous.title": "Enormous",
+  "anima.ui.combat.weapon.sizeProportion.giant.title": "Giant",
   "anima.ui.domine.kiAccumulation.willPower.title": "Wil",
   "anima.ui.domine.kiSkills.title": "Ki Skills",
   "anima.ui.domine.martialArts.grade.title": "Grade",
@@ -178,8 +184,6 @@
   "anima.ui.experienceSection.title": "Experience",
   "anima.ui.general.fatigue.title": "Fatigue",
   "anima.ui.general.initiative.base.title": "Turn",
-  "anima.ui.general.initiative.primary.title": "Turn 1",
-  "anima.ui.general.initiative.secondary.title": "Turn 2",
   "anima.ui.general.life.current.title": "Life points",
   "anima.ui.general.life.max.title": "Base",
   "anima.ui.general.modifiers.allActions.title": "Actions",
