--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -48,6 +48,11 @@
   "anima.ui.combat.armors.at.impact.base.title": "CON base",
   "anima.ui.combat.armors.at.thrust.base.title": "PEN base",
   "anima.ui.combat.armors.equipped.title": "¿Equipada?",
+  "anima.ui.combat.weapon.size.small.title": "Pequeña",
+  "anima.ui.combat.weapon.size.medium.title": "Mediana",
+  "anima.ui.combat.weapon.size.big.title": "Grande",
+  "anima.ui.combat.weapons.isShield.title": "¿Es escudo?",
+  "anima.ui.combat.weapons.equipped.title": "¿Equipada?",
   "anima.ui.combat.weapons.reload.base.title": "Recarga base",
   "anima.ui.combat.weapons.reload.final.title": "Recarga",
   "anima.ui.combat.armors.integrity.base.title": "Entereza base",
@@ -117,6 +122,7 @@
   "anima.ui.combat.weapons.quality.title": "Calidad",
   "anima.ui.combat.weapons.range.base.title": "Rango base (m)",
   "anima.ui.combat.weapons.range.final.title": "Rango (m)",
+  "anima.ui.combat.weapons.sizeProportion.title": "Proporción tamaño",
   "anima.ui.combat.weapons.size.title": "Tamaño",
   "anima.ui.combat.weapons.special.title": "Especial",
   "anima.ui.combat.weapons.title": "Armas",
@@ -141,9 +147,9 @@
   "anima.ui.domine.kiAccumulation.power.title": "Pod",
   "anima.ui.domine.kiAccumulation.strength.title": "Fue",
   "anima.ui.domine.kiAccumulation.title": "Ki acu.",
-  "anima.ui.combat.weapon.size.normal.title": "Normal",
-  "anima.ui.combat.weapon.size.enormous.title": "Enorme",
-  "anima.ui.combat.weapon.size.giant.title": "Gigante",
+  "anima.ui.combat.weapon.sizeProportion.normal.title": "Normal",
+  "anima.ui.combat.weapon.sizeProportion.enormous.title": "Enorme",
+  "anima.ui.combat.weapon.sizeProportion.giant.title": "Gigante",
   "anima.ui.domine.kiAccumulation.willPower.title": "Vol",
   "anima.ui.domine.kiSkills.title": "Habilidades del Ki",
   "anima.ui.domine.martialArts.grade.title": "Grado",
@@ -177,9 +183,7 @@
   "anima.ui.experienceSection.title": "Experiencia",
   "anima.ui.general.fatigue.title": "Cansancio",
   "anima.ui.general.naturalPenalty.title": "Pen. Natural",
-  "anima.ui.general.initiative.base.title": "Tur. Base",
-  "anima.ui.general.initiative.primary.title": "Tur. 1",
-  "anima.ui.general.initiative.secondary.title": "Tur. 2",
+  "anima.ui.general.initiative.base.title": "Turno",
   "anima.ui.general.life.current.title": "Puntos de vida",
   "anima.ui.general.life.max.title": "Base",
   "anima.ui.general.modifiers.allActions.title": "Acciones",
