changes: add puppet making as secondary skill

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -382,6 +382,7 @@
   "anima.ui.secondaries.swim.title": "Swim",
   "anima.ui.secondaries.tactics.title": "Tactics",
   "anima.ui.secondaries.tailoring.title": "Tailoring",
+  "anima.ui.secondaries.puppetMaking.title": "Puppet making",
   "anima.ui.secondaries.theft.title": "Theft",
   "anima.ui.secondaries.track.title": "Track",
   "anima.ui.secondaries.trading.title": "Trading",
