--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -381,6 +381,7 @@
   "anima.ui.secondaries.swim.title": "Nadar",
   "anima.ui.secondaries.tactics.title": "Táctica",
   "anima.ui.secondaries.tailoring.title": "Confección",
+  "anima.ui.secondaries.puppetMaking.title": "Confección de marionetas",
   "anima.ui.secondaries.theft.title": "Robo",
   "anima.ui.secondaries.track.title": "Rastrear",
   "anima.ui.secondaries.trading.title": "Comercio",
