changes: refactor main tab, fix elan and add inventory and money

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -192,9 +192,20 @@
   "anima.ui.general.movement.title": "Movement (m)",
   "anima.ui.general.movementType.title": "Mov. type",
   "anima.ui.general.naturalPenalty.title": "Natural pen.",
+  "anima.ui.general.tabs.first": "Character",
+  "anima.ui.general.tabs.second": "Details",
+  "anima.ui.general.tabs.third": "Inventory",
+  "anima.ui.inventoryItemsSection.amount.title": "Amount",
+  "anima.ui.inventoryItemsSection.name.title": "Object",
+  "anima.ui.inventoryItemsSection.title": "Inventory",
+  "anima.ui.inventoryItemsSection.weight.title": "Weight (kg)",
   "anima.ui.languageSection.base": "Base",
   "anima.ui.languageSection.title": "Languages",
   "anima.ui.levelSection.title": "Level",
+  "anima.ui.moneySection.cooper.title": "Cooper",
+  "anima.ui.moneySection.gold.title": "Gold",
+  "anima.ui.moneySection.silver.title": "Silver",
+  "anima.ui.moneySection.title": "Money",
   "anima.ui.mystic.act.alternative.title": "Alternative",
   "anima.ui.mystic.act.main.title": "Main",
   "anima.ui.mystic.act.title": "ACT",
@@ -364,6 +375,7 @@
   "anima.ui.secondaries.persuasion.title": "Persuasion",
   "anima.ui.secondaries.piloting.title": "Piloting",
   "anima.ui.secondaries.poisons.title": "Poisons",
+  "anima.ui.secondaries.puppetMaking.title": "Puppet making",
   "anima.ui.secondaries.ride.title": "Ride",
   "anima.ui.secondaries.ritualCalligraphy.title": "Ritual Calligraphy",
   "anima.ui.secondaries.runes.title": "Runes",
@@ -382,18 +394,17 @@
   "anima.ui.secondaries.swim.title": "Swim",
   "anima.ui.secondaries.tactics.title": "Tactics",
   "anima.ui.secondaries.tailoring.title": "Tailoring",
-  "anima.ui.secondaries.puppetMaking.title": "Puppet making",
   "anima.ui.secondaries.theft.title": "Theft",
   "anima.ui.secondaries.track.title": "Track",
   "anima.ui.secondaries.trading.title": "Trading",
-  "anima.ui.settings.tabVisibility.title": "Tab visibility",
-  "anima.ui.settings.tabVisibility.mystic.title": "Mystic",
-  "anima.ui.settings.tabVisibility.domine.title": "Domine",
-  "anima.ui.settings.tabVisibility.psychic.title": "Psychic",
   "anima.ui.secondaries.trapLore.title": "Trap Lore",
   "anima.ui.secondaries.vigor.title": "Vigor Abilities",
   "anima.ui.secondaries.wearArmor.title": "Wear Armor",
   "anima.ui.secondaries.withstandPain.title": "Withstand Pain",
+  "anima.ui.settings.tabVisibility.domine.title": "Domine",
+  "anima.ui.settings.tabVisibility.mystic.title": "Mystic",
+  "anima.ui.settings.tabVisibility.psychic.title": "Psychic",
+  "anima.ui.settings.tabVisibility.title": "Tab visibility",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.domine": "Domine",
   "anima.ui.tabs.main": "Main",
