--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -192,9 +192,20 @@
   "anima.ui.general.movement.title": "Movimiento (m)",
   "anima.ui.general.movementType.title": "Tipo mov.",
   "anima.ui.general.naturalPenalty.title": "Pen. Natural",
+  "anima.ui.general.tabs.first": "Personaje",
+  "anima.ui.general.tabs.second": "Detalles",
+  "anima.ui.general.tabs.third": "Inventario",
+  "anima.ui.inventoryItemsSection.amount.title": "Cantidad",
+  "anima.ui.inventoryItemsSection.name.title": "Objeto",
+  "anima.ui.inventoryItemsSection.title": "Inventario",
+  "anima.ui.inventoryItemsSection.weight.title": "Peso (kg)",
   "anima.ui.languageSection.base": "Base",
   "anima.ui.languageSection.title": "Idiomas",
   "anima.ui.levelSection.title": "Nivel",
+  "anima.ui.moneySection.cooper.title": "Cobre",
+  "anima.ui.moneySection.gold.title": "Oro",
+  "anima.ui.moneySection.silver.title": "Plata",
+  "anima.ui.moneySection.title": "Dinero",
   "anima.ui.mystic.act.alternative.title": "Alternativo",
   "anima.ui.mystic.act.main.title": "Principal",
   "anima.ui.mystic.act.title": "ACT",
@@ -364,6 +375,7 @@
   "anima.ui.secondaries.persuasion.title": "Persuasión",
   "anima.ui.secondaries.piloting.title": "Pilotar",
   "anima.ui.secondaries.poisons.title": "Venenos",
+  "anima.ui.secondaries.puppetMaking.title": "Confección de marionetas",
   "anima.ui.secondaries.ride.title": "Montar",
   "anima.ui.secondaries.ritualCalligraphy.title": "Cal. Ritual",
   "anima.ui.secondaries.runes.title": "Runas",
@@ -381,11 +393,6 @@
   "anima.ui.secondaries.swim.title": "Nadar",
   "anima.ui.secondaries.tactics.title": "Táctica",
   "anima.ui.secondaries.tailoring.title": "Confección",
-  "anima.ui.secondaries.puppetMaking.title": "Confección de marionetas",
-  "anima.ui.settings.tabVisibility.title": "Visibilidad de pestañas",
-  "anima.ui.settings.tabVisibility.mystic.title": "Místico",
-  "anima.ui.settings.tabVisibility.domine.title": "Domine",
-  "anima.ui.settings.tabVisibility.psychic.title": "Psíquico",
   "anima.ui.secondaries.theft.title": "Robo",
   "anima.ui.secondaries.track.title": "Rastrear",
   "anima.ui.secondaries.trading.title": "Comercio",
@@ -393,6 +400,10 @@
   "anima.ui.secondaries.vigor.title": "Habilidades de vigor",
   "anima.ui.secondaries.wearArmor.title": "Llevar Armadura",
   "anima.ui.secondaries.withstandPain.title": "Resistir el dolor",
+  "anima.ui.settings.tabVisibility.domine.title": "Domine",
+  "anima.ui.settings.tabVisibility.mystic.title": "Místico",
+  "anima.ui.settings.tabVisibility.psychic.title": "Psíquico",
+  "anima.ui.settings.tabVisibility.title": "Visibilidad de pestañas",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.domine": "Domine",
   "anima.ui.tabs.main": "Principal",
