wip: websocket combat system

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,8 +1,14 @@
 {
   "anima.ui.advantageSection.title": "Advantages",
   "macros.damageCalculator.dialog.title": "Damage calculator",
-  "macros.damageCalculator.dialog.attack.title": "Attaci",
+  "macros.damageCalculator.dialog.attack.title": "Attack",
   "macros.damageCalculator.dialog.defense.title": "Defense",
+  "macros.combat.dialog.attacking.mod.title": "Modifier",
+  "macros.combat.dialog.attacking.fatigue.title": "Fatigue points",
+  "macros.combat.dialog.attacking.weapon.title": "Weapon",
+  "macros.combat.dialog.defending.mod.title": "Modifier",
+  "macros.combat.dialog.defending.fatigue.title": "Fatigue points",
+  "macros.combat.dialog.defending.defend.title": "Defense",
   "macros.damageCalculator.dialog.ta.title": "AT",
   "macros.damageCalculator.dialog.damage.title": "Damage",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Round damage calculator damage result in multiples of 5?",
@@ -20,6 +26,7 @@
   "anima.ui.characteristics.agility": "Agility",
   "anima.ui.characteristics.constitution": "Constitution",
   "anima.ui.characteristics.dexterity": "Dexterity",
+  "macros.combat.dialog.attacking.weapon.critic.title": "Critic",
   "anima.ui.characteristics.intelligence": "Intelligence",
   "anima.ui.characteristics.perception": "Perception",
   "anima.ui.characteristics.power": "Power",
