--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -3,6 +3,13 @@
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear el daño resultante de la calculadora de daño en múltiplos de 5?",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Aquellos números que no sean múltiplos de 5 se redondearán al múltiplo más cercano de 5. P.E: 22 se redondeará a 20 y 13 a 15",
   "macros.damageCalculator.dialog.title": "Calculadora de daño",
+  "macros.combat.dialog.attacking.mod.title": "Modificador",
+  "macros.combat.dialog.attacking.fatigue.title": "Puntos de cansancio",
+  "macros.combat.dialog.attacking.weapon.title": "Arma",
+  "macros.combat.dialog.defending.mod.title": "Modificador",
+  "macros.combat.dialog.attacking.weapon.critic.title": "Crítico",
+  "macros.combat.dialog.defending.fatigue.title": "Puntos de cansancio",
+  "macros.combat.dialog.defending.defend.title": "Defensa",
   "macros.damageCalculator.dialog.attack.title": "Ataque",
   "macros.damageCalculator.dialog.defense.title": "Defensa",
   "macros.damageCalculator.dialog.ta.title": "TA",
