wip: websocket combat system

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,18 +1,5 @@
 {
   "anima.ui.advantageSection.title": "Advantages",
-  "macros.damageCalculator.dialog.title": "Damage calculator",
-  "macros.damageCalculator.dialog.attack.title": "Attack",
-  "macros.damageCalculator.dialog.defense.title": "Defense",
-  "macros.combat.dialog.attacking.mod.title": "Modifier",
-  "macros.combat.dialog.attacking.fatigue.title": "Fatigue points",
-  "macros.combat.dialog.attacking.weapon.title": "Weapon",
-  "macros.combat.dialog.defending.mod.title": "Modifier",
-  "macros.combat.dialog.defending.fatigue.title": "Fatigue points",
-  "macros.combat.dialog.defending.defend.title": "Defense",
-  "macros.damageCalculator.dialog.ta.title": "AT",
-  "macros.damageCalculator.dialog.damage.title": "Damage",
-  "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Round damage calculator damage result in multiples of 5?",
-  "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Those numbers that are not multiples of 5 will be rounded to near 5 multiple. For example: 22 will be rounded to 20 adn 13 to 15",
   "anima.ui.aspectSection.age.title": "Age",
   "anima.ui.aspectSection.appearance.title": "Appearance",
   "anima.ui.aspectSection.eyes.title": "Eyes",
@@ -26,7 +13,6 @@
   "anima.ui.characteristics.agility": "Agility",
   "anima.ui.characteristics.constitution": "Constitution",
   "anima.ui.characteristics.dexterity": "Dexterity",
-  "macros.combat.dialog.attacking.weapon.critic.title": "Critic",
   "anima.ui.characteristics.intelligence": "Intelligence",
   "anima.ui.characteristics.perception": "Perception",
   "anima.ui.characteristics.power": "Power",
@@ -419,6 +405,8 @@
   "anima.ui.settings.tabVisibility.mystic.title": "Mystic",
   "anima.ui.settings.tabVisibility.psychic.title": "Psychic",
   "anima.ui.settings.tabVisibility.title": "Tab visibility",
+  "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Those numbers that are not multiples of 5 will be rounded to near 5 multiple. For example: 22 will be rounded to 20 adn 13 to 15",
+  "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Round damage calculator damage result in multiples of 5?",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.domine": "Domine",
   "anima.ui.tabs.main": "Main",
@@ -468,5 +456,73 @@
   "dialogs.items.title.content": "Title name",
   "dialogs.items.weapons.content": "Weapon name",
   "dialogs.mod.content": "Modifier",
-  "dialogs.title": "Dialog"
+  "dialogs.title": "Dialog",
+  "macros.combat.dialog.applyAndCloseButton.title": "Apply and close",
+  "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Apply changes in actors such as fatigue points used or damage",
+  "macros.combat.dialog.at.title": "AT",
+  "macros.combat.dialog.attack.title": "Attack",
+  "macros.combat.dialog.attackButton.title": "Send attack",
+  "macros.combat.dialog.attackSent.title": "Attack sent. Waiting for combat results...",
+  "macros.combat.dialog.attackType.combat.title": "Physic",
+  "macros.combat.dialog.attackType.mystic.title": "Magic",
+  "macros.combat.dialog.attackType.psychic.title": "Psychic",
+  "macros.combat.dialog.attacker.title": "Atacante",
+  "macros.combat.dialog.attackerCustomModifier.title": "Attacker custom modifier",
+  "macros.combat.dialog.attacking.title": "Attacking to ",
+  "macros.combat.dialog.blockButton.title": "Try to block",
+  "macros.combat.dialog.blockValue.title": "Block value",
+  "macros.combat.dialog.cancelButton.title": "Cancel",
+  "macros.combat.dialog.counterAttackButton.title": "Counterattack",
+  "macros.combat.dialog.counterAttackButtonTooltip.title": "This option will execute a new attack from the defender",
+  "macros.combat.dialog.critic.title": "Crític",
+  "macros.combat.dialog.damage.title": "Damage",
+  "macros.combat.dialog.damageDeal.title": "Damage deal",
+  "macros.combat.dialog.defend.title": "Defense",
+  "macros.combat.dialog.defender.title": "Defender",
+  "macros.combat.dialog.defenderCustomModifier.title": "Defender custom modifier",
+  "macros.combat.dialog.defending.defend.title": "Defense",
+  "macros.combat.dialog.defending.title": "Defending from ",
+  "macros.combat.dialog.defense.title": "Defense",
+  "macros.combat.dialog.defenseButton.title": "Send defense",
+  "macros.combat.dialog.defenseCount.title": "Defense #",
+  "macros.combat.dialog.defenseSent.title": "Defense sent. Waiting for combat results...",
+  "macros.combat.dialog.defenseType.block.title": "Block",
+  "macros.combat.dialog.defenseType.dodge.title": "Dodge",
+  "macros.combat.dialog.defenseType.title": "Defense type",
+  "macros.combat.dialog.difference.title": "Difference",
+  "macros.combat.dialog.dodgeButton.title": "Try to dodge",
+  "macros.combat.dialog.dodgeValue.title": "Dodge value",
+  "macros.combat.dialog.fatigue.title": "Fatigue points",
+  "macros.combat.dialog.fatigueUsed.title": "Used fatigue",
+  "macros.combat.dialog.magicProjection.normal.title": "Normal",
+  "macros.combat.dialog.magicProjection.offensive.title": "Offensive",
+  "macros.combat.dialog.magicProjection.title": "Magic Projection",
+  "macros.combat.dialog.modifier.title": "Modifier",
+  "macros.combat.dialog.notEnoughFatigue.title": "Don't have enough fatigue points to use",
+  "macros.combat.dialog.psychicPotential.title": "Psychic potential",
+  "macros.combat.dialog.psychicPower.title": "Psychic power",
+  "macros.combat.dialog.psychicProjection.title": "Psychic projection",
+  "macros.combat.dialog.requestPermission.title": " requests permission to attack ",
+  "macros.combat.dialog.rolled.title": "Dice rolled",
+  "macros.combat.dialog.spell.title": "Spell",
+  "macros.combat.dialog.spellGrade.advanced.title": "Advanced",
+  "macros.combat.dialog.spellGrade.arcane.title": "Arcane",
+  "macros.combat.dialog.spellGrade.base.title": "Base",
+  "macros.combat.dialog.spellGrade.intermediate.title": "Intermediate",
+  "macros.combat.dialog.spellGrade.title": "Spell grade",
+  "macros.combat.dialog.total.title": "Total",
+  "macros.combat.dialog.waitRequest.title": "Attack request sent. Waiting for DM response...",
+  "macros.combat.dialog.waitingAttack.title": "Waiting for attacker...",
+  "macros.combat.dialog.waitingDefense.title": "Waiting for defender...",
+  "macros.combat.dialog.waitingDefenseForAttack.title": "Waiting for attacker sent the attack...",
+  "macros.combat.dialog.weapon.critic.title": "Critic",
+  "macros.combat.dialog.weapon.title": "Weapon",
+  "macros.combat.dialog.weaponAttack.title": "Weapon attack",
+  "macros.combat.dialog.weaponUsed.title": "Weapon",
+  "macros.combat.dialog.winner.title": " wins this assault",
+  "macros.damageCalculator.dialog.attack.title": "Attack",
+  "macros.damageCalculator.dialog.damage.title": "Damage",
+  "macros.damageCalculator.dialog.defense.title": "Defense",
+  "macros.damageCalculator.dialog.ta.title": "AT",
+  "macros.damageCalculator.dialog.title": "Damage calculator"
 }
