--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -1,19 +1,5 @@
 {
   "anima.ui.advantageSection.title": "Ventajas",
-  "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear el daño resultante de la calculadora de daño en múltiplos de 5?",
-  "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Aquellos números que no sean múltiplos de 5 se redondearán al múltiplo más cercano de 5. P.E: 22 se redondeará a 20 y 13 a 15",
-  "macros.damageCalculator.dialog.title": "Calculadora de daño",
-  "macros.combat.dialog.attacking.mod.title": "Modificador",
-  "macros.combat.dialog.attacking.fatigue.title": "Puntos de cansancio",
-  "macros.combat.dialog.attacking.weapon.title": "Arma",
-  "macros.combat.dialog.defending.mod.title": "Modificador",
-  "macros.combat.dialog.attacking.weapon.critic.title": "Crítico",
-  "macros.combat.dialog.defending.fatigue.title": "Puntos de cansancio",
-  "macros.combat.dialog.defending.defend.title": "Defensa",
-  "macros.damageCalculator.dialog.attack.title": "Ataque",
-  "macros.damageCalculator.dialog.defense.title": "Defensa",
-  "macros.damageCalculator.dialog.ta.title": "TA",
-  "macros.damageCalculator.dialog.damage.title": "Daño",
   "anima.ui.aspectSection.age.title": "Edad",
   "anima.ui.aspectSection.appearance.title": "Apariencia",
   "anima.ui.aspectSection.eyes.title": "Ojos",
@@ -418,6 +404,8 @@
   "anima.ui.settings.tabVisibility.mystic.title": "Místico",
   "anima.ui.settings.tabVisibility.psychic.title": "Psíquico",
   "anima.ui.settings.tabVisibility.title": "Visibilidad de pestañas",
+  "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Aquellos números que no sean múltiplos de 5 se redondearán al múltiplo más cercano de 5. P.E: 22 se redondeará a 20 y 13 a 15",
+  "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear el daño resultante de la calculadora de daño en múltiplos de 5?",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.domine": "Domine",
   "anima.ui.tabs.main": "Principal",
@@ -466,5 +454,73 @@
   "dialogs.items.title.content": "Nombre del título",
   "dialogs.items.weapons.content": "Nombre del arma",
   "dialogs.mod.content": "Modificador",
-  "dialogs.title": "Diálogo"
+  "dialogs.title": "Diálogo",
+  "macros.combat.dialog.applyAndCloseButton.title": "Aplicar y salir",
+  "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Aplicar cambios como los puntos de fatiga usados o el daño en las fichas de los personajes implicados",
+  "macros.combat.dialog.at.title": "TA",
+  "macros.combat.dialog.attack.title": "Ataque",
+  "macros.combat.dialog.attackButton.title": "Enviar ataque",
+  "macros.combat.dialog.attackSent.title": "Ataque enviado. Esperando a los resultados del combate...",
+  "macros.combat.dialog.attackType.combat.title": "Físico",
+  "macros.combat.dialog.attackType.mystic.title": "Mágico",
+  "macros.combat.dialog.attackType.psychic.title": "Psíquico",
+  "macros.combat.dialog.attacker.title": "Atacante",
+  "macros.combat.dialog.attackerCustomModifier.title": "Modificador personalizado del ataque",
+  "macros.combat.dialog.attacking.title": "Atacando a ",
+  "macros.combat.dialog.blockButton.title": "Intentar bloquear",
+  "macros.combat.dialog.blockValue.title": "Valor de bloqueo",
+  "macros.combat.dialog.cancelButton.title": "Cancelar",
+  "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
+  "macros.combat.dialog.counterAttackButtonTooltip.title": "Esta opción permitirá al defensor realizar un contraataque directamente",
+  "macros.combat.dialog.critic.title": "Crítico",
+  "macros.combat.dialog.damage.title": "Daño",
+  "macros.combat.dialog.damageDeal.title": "Daño hecho",
+  "macros.combat.dialog.defend.title": "Defensa",
+  "macros.combat.dialog.defender.title": "Defensor",
+  "macros.combat.dialog.defenderCustomModifier.title": "Modificador personalizado de la defensa",
+  "macros.combat.dialog.defending.defend.title": "Defensa",
+  "macros.combat.dialog.defending.title": "Defendiendote de ",
+  "macros.combat.dialog.defense.title": "Defensa",
+  "macros.combat.dialog.defenseButton.title": "Enviar defensa",
+  "macros.combat.dialog.defenseCount.title": "Defensa #",
+  "macros.combat.dialog.defenseSent.title": "Defensa enviada. Esperando a los resultados del combate...",
+  "macros.combat.dialog.defenseType.block.title": "Bloqueo",
+  "macros.combat.dialog.defenseType.dodge.title": "Esquiva",
+  "macros.combat.dialog.defenseType.title": "Tipo de defensa",
+  "macros.combat.dialog.difference.title": "Diferencia de totales",
+  "macros.combat.dialog.dodgeButton.title": "Intentar esquivar",
+  "macros.combat.dialog.dodgeValue.title": "Valor de esquiva",
+  "macros.combat.dialog.fatigue.title": "Puntos de cansancio",
+  "macros.combat.dialog.fatigueUsed.title": "Fatiga usada",
+  "macros.combat.dialog.magicProjection.normal.title": "Normal",
+  "macros.combat.dialog.magicProjection.offensive.title": "Ofensiva",
+  "macros.combat.dialog.magicProjection.title": "Proyección mágica",
+  "macros.combat.dialog.modifier.title": "Modificador",
+  "macros.combat.dialog.notEnoughFatigue.title": "No tienes puntos de cansancio para usar",
+  "macros.combat.dialog.psychicPotential.title": "Potencial Psíquico",
+  "macros.combat.dialog.psychicPower.title": "Poder psíquico",
+  "macros.combat.dialog.psychicProjection.title": "Proyección psíquica",
+  "macros.combat.dialog.requestPermission.title": " ha enviado una petición de ataque a ",
+  "macros.combat.dialog.rolled.title": "Tirada del dado",
+  "macros.combat.dialog.spell.title": "Hechizo",
+  "macros.combat.dialog.spellGrade.advanced.title": "Avanzado",
+  "macros.combat.dialog.spellGrade.arcane.title": "Arcano",
+  "macros.combat.dialog.spellGrade.base.title": "Base",
+  "macros.combat.dialog.spellGrade.intermediate.title": "Intermedio",
+  "macros.combat.dialog.spellGrade.title": "Grado del hechizo",
+  "macros.combat.dialog.total.title": "Total",
+  "macros.combat.dialog.waitRequest.title": "Petición de ataque enviada. Esperando respuesta del GM...",
+  "macros.combat.dialog.waitingAttack.title": "Esperando por el atacante...",
+  "macros.combat.dialog.waitingDefense.title": "Esperando por el defensor...",
+  "macros.combat.dialog.waitingDefenseForAttack.title": "Esperando al atacante para enviar petición de defensa...",
+  "macros.combat.dialog.weapon.critic.title": "Crítico",
+  "macros.combat.dialog.weapon.title": "Arma",
+  "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
+  "macros.combat.dialog.weaponUsed.title": "Arma",
+  "macros.combat.dialog.winner.title": " gana esta ronda",
+  "macros.damageCalculator.dialog.attack.title": "Ataque",
+  "macros.damageCalculator.dialog.damage.title": "Daño",
+  "macros.damageCalculator.dialog.defense.title": "Defensa",
+  "macros.damageCalculator.dialog.ta.title": "TA",
+  "macros.damageCalculator.dialog.title": "Calculadora de daño"
 }
